Fix service page header margin on mobile devices

--- a/app/assets/stylus/pages/services.styl
+++ b/app/assets/stylus/pages/services.styl
@@ -1,11 +1,18 @@
 .services
     &__page-header
         margin-bottom 75px
+        padding-left 40px
+        padding-right 40px
+
+        @media screen and ( min-width $screen-md )
+            padding-left 0
+            padding-right 0
+
         .page-header--title
             color $black-light
 
     .page-section--content
-        margin-bottom 55px
+        margin-bottom 40px
 
         @media screen and ( min-width $screen-md )
             margin-bottom 0
